<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NotePad</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">Note title:</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">Notes</string>

    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search notes...</string>
    <string name="menu_category">Category</string>
    <string name="menu_category_filter">Category Filter</string>
    <string name="menu_todo">Mark as Todo</string>
    <string name="menu_export">Export</string>
    <string name="todo_marked">Note marked as todo</string>
    <string name="todo_unmarked">Todo mark removed</string>
    <string name="menu_background_color">Background Color</string>
    <string name="background_color_dialog">Select Background Color</string>
    <string name="color_white">White</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_blue">Blue</string>
    <string name="color_black">Black</string>
    <string name="category_all">All Categories</string>
    <string name="category_dialog_title">Select Category</string>
    <string name="category_general">General</string>
    <string name="category_work">Work</string>
    <string name="category_personal">Personal</string>
    <string name="category_ideas">Ideas</string>
    <string name="category_todo">Todo</string>
    <string name="export_success">Note exported successfully</string>
    <string name="export_failed">Failed to export note</string>
    <string name="export_location">Location</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>
</resources>